<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tech.lemnis.backgrounddataservice.feature.MainActivity">

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView2"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView3"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/progressBar4"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView4"
        android:visibility="invisible" />

    <Button
        android:id="@+id/magic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:onClick="magic"
        android:text="@string/button_text" />

    <TextView
        android:id="@+id/asyncResultView1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/title1"
        android:padding="10dp"
        android:text="@string/view_hint_1"
        android:textColorHint="@color/colorAccent"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/asyncResultView2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:padding="10dp"
        android:text="@string/view_hint_2" />

    <TextView
        android:id="@+id/asyncResultView3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:padding="10dp"
        android:text="@string/view_hint_3" />

    <TextView
        android:id="@+id/asyncResultView4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView4"
        android:padding="10dp"
        android:text="@string/view_hint_4" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/title1"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/title1"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/magic"
        android:text="@string/title_1"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/asyncResultView1"
        android:text="@string/title_2"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/asyncResultView2"
        android:text="@string/title_3"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/asyncResultView3"
        android:text="@string/title_4"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

</android.widget.RelativeLayout>
